WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
86837
[EFL] PlatformKeyboardEventEfl is missing ESC key handling.
https://bugs.webkit.org/show_bug.cgi?id=86837
Summary
[EFL] PlatformKeyboardEventEfl is missing ESC key handling.
Mikhail Pozdnyakov
Reported
2012-05-18 03:15:46 PDT
EFL' PlatformKeyboardEventEfl is missing ESC key handling. Causes failing of fast/forms/input-search-press-escape-key.html.
Attachments
patch
(3.98 KB, patch)
2012-05-18 03:57 PDT
,
Mikhail Pozdnyakov
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mikhail Pozdnyakov
Comment 1
2012-05-18 03:57:39 PDT
Created
attachment 142681
[details]
patch
Gyuyoung Kim
Comment 2
2012-05-18 03:59:57 PDT
Comment on
attachment 142681
[details]
patch Looks fine.
Raphael Kubo da Costa (:rakuco)
Comment 3
2012-05-18 08:16:30 PDT
Comment on
attachment 142681
[details]
patch Looks fine.
WebKit Review Bot
Comment 4
2012-05-21 02:43:04 PDT
Comment on
attachment 142681
[details]
patch Clearing flags on attachment: 142681 Committed
r117752
: <
http://trac.webkit.org/changeset/117752
>
WebKit Review Bot
Comment 5
2012-05-21 02:43:09 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug