[EFL] PlatformKeyboardEventEfl is missing ESC key handling. https://bugs.webkit.org/show_bug.cgi?id=86837

Patch by Mikhail Pozdnyakov <mikhail.pozdnyakov@intel.com> on 2012-05-21
Reviewed by Kenneth Rohde Christiansen.

Source/WebCore:

Added ESC key handling.

* platform/efl/EflKeyboardUtilities.cpp:
(WebCore::createKeyMap):
(WebCore::singleCharacterString):

Tools:

* DumpRenderTree/efl/EventSender.cpp:
(keyNameFromJSValue): Added ESC key handling.

LayoutTests:

* platform/efl/Skipped: Unskipped fast/forms/input-search-press-escape-key.html.

Canonical link: https://commits.webkit.org/104650@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@117752 268f45cc-cd09-0410-ab3c-d52691b4dbfc